package.json updated: desc

--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-	"author": {
-		"name": "Muhammad Naeem Tahir",
-		"email": "m.naeemtahir@hotmail.com"},
-	"name": "fcc-learn-npm-package-json",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://idontknow/todo.git"
-	}
+  "name": "fcc-learn-npm-package-json",
+  "author": {
+    "name": "Muhammad Naeem Tahir",
+    "email": "m.naeemtahir@hotmail.com"
+  },
+  "description": "A project that does nothing but pass FCC tests",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://idontknow/todo.git"
+  }
 }
